[gd_scene load_steps=6 format=3 uid="uid://c6a73cp73lk2s"]

[ext_resource type="Script" uid="uid://p37xdte3r0eu" path="res://ui/score_line.gd" id="1_k360r"]
[ext_resource type="FontFile" uid="uid://ksfnpkei2fwm" path="res://assets/merchant-copy/Merchant Copy.ttf" id="2_arnyd"]

[sub_resource type="LabelSettings" id="LabelSettings_1enrn"]
font = ExtResource("2_arnyd")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_17cat"]
font = ExtResource("2_arnyd")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_pmdpq"]
font = ExtResource("2_arnyd")
font_size = 32

[node name="Score" type="HBoxContainer"]
texture_filter = 1
alignment = 1
script = ExtResource("1_k360r")

[node name="PlaceLabel" type="Label" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "1."
label_settings = SubResource("LabelSettings_1enrn")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Zaubergurke"
label_settings = SubResource("LabelSettings_1enrn")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "10.0"
label_settings = SubResource("LabelSettings_17cat")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "200190"
label_settings = SubResource("LabelSettings_pmdpq")
horizontal_alignment = 1
